# carscout_pipe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
airflow/: .gitignore  Dockerfile
airflow/dags/: pipeline.py
app/: api.py  celery_app.py  cli.py
carscout_pipe/: attribute_selectors.py  main.py  main_2.py  main_functional.py
carscout_pipe/tests/: test_main_functional.py
carscout_pipe/utils/: common.py  logging.py  scraping.py  webdriver.py
configs/: local.yml
core/: exceptions.py
core/entities/: brand.py  listing.py  run.py  vehicle.py
core/repositories/: listing_repository.py  run_repository.py  vehicle_repository.py
core/services/: brand_service.py  listing_service.py  run_service.py  vehicle_service.py
core/utils/: prices.py
dashboard/: Dockerfile  README.md  app.py
db/: init_db.py
docs/: CONTRIBUTING.md  ROADMAP.md
examples/: configs.py  http_requests.py  process_listings.py  process_vehicles.py  run_pipeline.py
infra/: bootstrap.py  config.py  containers.py  settings.py
migrations/: README.md  env.py
scripts/: http_retrieve_token.py  ingest_into_db.py  main.py  main_scraper.py  process_listings.py  process_vehicles.py  run_pipeline.py  scrape_brands_and_models.py  scrape_listings.py  scrape_vehicles.py  temp.py
src/: config.py  exceptions.py  value_mappings.py  vehicle_model.py  xpaths.py
tasks/: scraping.py  scraping_task.py
tests/: conftest.py
worker/: main.py  tasks.py
(+122 files in other folders)
